--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <!-- Header -->
   <header class="bg-gray-800 text-orange-400 w-full py-6 text-center shadow-md">
     <h1 class="text-3xl font-bold">🛠️ The Hardware Hotline</h1>
-    <p class="text-lg mt-2">Free Tech Help & Repairs — Schedule Your Drop-off!</p>
-    <p class="text-sm mt-1 font-semibold text-yellow-400">💡 30 Years of Experience at Your Service!</p>
+    <p class="text-lg mt-2">30 Years of Experience — Free Tech Help & Repairs!</p>
   </header>
 
   <main class="w-full max-w-3xl p-6 space-y-8">
@@ -25,9 +24,9 @@
         <li>🖥️ Free Virus & Malware Removal</li>
         <li>💽 Free Data Backup & Recovery Help</li>
         <li>⚙️ Free Computer Cleaning</li>
-        <li>🧰 Free Computer Build Labor (only pay for parts)</li>
-        <li>🔩 Free Repair Labor</li>
-        <li>🚀 Free Computer Speed Up & Optimizations</li>
+        <li>🖥️ Free Computer Build Labor (Only pay for parts)</li>
+        <li>🛠️ Free Repair Labor</li>
+        <li>🚀 Free Computer Speed-up & Optimizations</li>
       </ul>
     </section>
 
@@ -36,47 +35,58 @@
       <h2 class="text-2xl font-bold mb-4 text-orange-400">📅 Schedule a Drop-off Appointment</h2>
       <form id="appointmentForm" class="space-y-4">
         <input type="text" id="name" placeholder="Your Name" required
-          class="w-full p-2 border border-gray-700 rounded-lg bg-gray-900 text-orange-400" />
-        <input type="date" id="date" required
-          class="w-full p-2 border border-gray-700 rounded-lg bg-gray-900 text-orange-400" />
-        <select id="time" required class="w-full p-2 border border-gray-700 rounded-lg bg-gray-900 text-orange-400">
+          class="w-full p-2 border border-orange-400 rounded-lg bg-gray-900 text-orange-400" />
+
+        <!-- Mobile-friendly date input -->
+        <div class="relative">
+          <input type="date" id="date" required
+            placeholder="MM/DD/YYYY"
+            class="w-full p-2 border border-orange-400 rounded-lg bg-gray-900 text-orange-400 appearance-none" />
+          <div class="absolute inset-y-0 right-3 flex items-center pointer-events-none">
+            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-orange-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
+            </svg>
+          </div>
+        </div>
+
+        <select id="time" required class="w-full p-2 border border-orange-400 rounded-lg bg-gray-900 text-orange-400">
           <option value="">Select Preferred Time</option>
           <option>Morning (9AM - 11AM)</option>
           <option>Midday (11AM - 2PM)</option>
           <option>Afternoon (2PM - 5PM)</option>
         </select>
+
         <textarea id="description" placeholder="Describe your issue..."
-          class="w-full p-2 border border-gray-700 rounded-lg bg-gray-900 text-orange-400" required></textarea>
+          class="w-full p-2 border border-orange-400 rounded-lg bg-gray-900 text-orange-400" required></textarea>
+
         <button type="submit"
-          class="w-full bg-orange-600 hover:bg-orange-700 text-black font-semibold py-2 rounded-lg transition hover:scale-105">
-          💾 Save Appointment Request
+          class="w-full bg-orange-500 text-gray-900 font-bold py-2 rounded-lg hover:shadow-lg transition transform hover:scale-105">
+          💾 Save Appointment
         </button>
       </form>
       <p id="responseMessage" class="mt-3 text-center font-semibold"></p>
     </section>
 
-    <!-- Appointments View -->
-    <section class="bg-gray-800 rounded-2xl shadow p-6">
-      <h2 class="text-2xl font-bold mb-4 text-orange-400">🔍 Upcoming Appointments</h2>
-      <div id="appointmentsList" class="space-y-3 text-orange-400">
-        <p>Loading appointments...</p>
-      </div>
-    </section>
-
     <!-- PayPal Donate Button -->
     <section class="bg-gray-800 rounded-2xl shadow p-6 text-center">
-      <h2 class="text-2xl font-bold mb-4 text-orange-400">💖 Support The Hardware Hotline</h2>
-      <p class="mb-4">Donations are optional — any contribution helps keep our free services running!</p>
-      
       <form action="https://www.paypal.com/donate" method="post" target="_top">
         <input type="hidden" name="business" value="blackicerocks82@gmail.com" />
         <input type="hidden" name="currency_code" value="USD" />
-        <button type="submit" class="bg-orange-500 text-black font-bold py-3 px-6 rounded-lg hover:shadow-lg hover:scale-105 transition">
+        <button type="submit" class="bg-orange-500 text-gray-900 font-bold py-3 px-6 rounded-lg hover:shadow-lg transition transform hover:scale-105">
           Donate
         </button>
       </form>
+      <p class="mt-2 text-sm text-gray-400">Donations are optional — thank you for supporting 30 years of experience!</p>
     </section>
 
+    <!-- Appointments View -->
+    <section class="bg-gray-800 rounded-2xl shadow p-6">
+      <h2 class="text-2xl font-bold mb-4 text-orange-400">🔍 Upcoming Appointments</h2>
+      <div id="appointmentsList" class="space-y-3 text-gray-300">
+        <p>Loading appointments...</p>
+      </div>
+    </section>
   </main>
 
   <footer class="bg-gray-800 text-orange-400 w-full text-center py-4 mt-auto">
@@ -100,7 +110,7 @@
           appointmentsList.innerHTML = "<p>No appointments yet — be the first!</p>";
         } else {
           appointmentsList.innerHTML = json.map(a => `
-            <div class="p-3 border rounded-lg shadow-sm bg-gray-900 text-orange-400">
+            <div class="p-3 border rounded-lg shadow-sm bg-gray-900">
               <strong>${a.name}</strong><br>
               📅 ${a.date} — 🕒 ${a.time}<br>
               💬 ${a.description}
@@ -145,7 +155,5 @@
     loadAppointments();
   </script>
 </body>
-</html>
-
 </html>
 
