--- a/index.html
+++ b/index.html
@@ -5,16 +5,43 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>The Hardware Hotline</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <style>
+    /* Button animations */
+    .btn-animate {
+      transition: all 0.2s ease-in-out;
+    }
+    .btn-animate:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(255, 165, 0, 0.6);
+    }
+    .btn-animate:active {
+      transform: scale(0.97);
+      box-shadow: 0 0 8px rgba(255, 165, 0, 0.4);
+    }
+  </style>
 </head>
 <body class="bg-gray-900 text-orange-400 min-h-screen flex flex-col items-center">
 
   <!-- Header -->
   <header class="bg-gray-800 text-orange-400 w-full py-6 text-center shadow-md">
     <h1 class="text-3xl font-bold">🛠️ The Hardware Hotline</h1>
-    <p class="text-lg mt-2">30 Years of Experience — Free Tech Help & Repairs!</p>
+    <p class="text-lg mt-2">Free Tech Help & Repairs — 30 Years of Experience</p>
   </header>
 
   <main class="w-full max-w-3xl p-6 space-y-8">
+
+    <!-- Donate Button -->
+    <section class="text-center">
+      <form action="https://www.paypal.com/donate" method="post" target="_top" class="inline-block">
+        <input type="hidden" name="business" value="blackicerocks82@gmail.com" />
+        <input type="hidden" name="currency_code" value="USD" />
+        <button type="submit"
+          class="btn-animate bg-orange-500 text-black font-bold py-3 px-6 rounded-lg">
+          Donate
+        </button>
+      </form>
+      <p class="mt-2 text-gray-400 text-sm">Donations are optional</p>
+    </section>
 
     <!-- Services Section -->
     <section class="bg-gray-800 rounded-2xl shadow p-6">
@@ -23,10 +50,10 @@
         <li>🔧 Free Desktop & Laptop Diagnostics</li>
         <li>🖥️ Free Virus & Malware Removal</li>
         <li>💽 Free Data Backup & Recovery Help</li>
-        <li>⚙️ Free Computer Cleaning</li>
-        <li>🖥️ Free Computer Build Labor (Only pay for parts)</li>
-        <li>🛠️ Free Repair Labor</li>
-        <li>🚀 Free Computer Speed-up & Optimizations</li>
+        <li>🧹 Free Computer Cleaning</li>
+        <li>🛠️ Free Computer Build Labor (Only Pay for Parts)</li>
+        <li>🔧 Free Repair Labor</li>
+        <li>⚡ Free Computer Speed Up & Optimizations</li>
       </ul>
     </section>
 
@@ -37,11 +64,12 @@
         <input type="text" id="name" placeholder="Your Name" required
           class="w-full p-2 border border-orange-400 rounded-lg bg-gray-900 text-orange-400" />
 
-        <!-- Mobile-friendly date input -->
+        <!-- Date picker with mobile-friendly placeholder -->
         <div class="relative">
+          <input type="text" id="dateDisplay" placeholder="MM/DD/YYYY" readonly
+            class="w-full p-2 border border-orange-400 rounded-lg bg-gray-900 text-orange-400" />
           <input type="date" id="date" required
-            placeholder="MM/DD/YYYY"
-            class="w-full p-2 border border-orange-400 rounded-lg bg-gray-900 text-orange-400 appearance-none" />
+            class="absolute inset-0 w-full h-full opacity-0 cursor-pointer" />
           <div class="absolute inset-y-0 right-3 flex items-center pointer-events-none">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-orange-400" fill="none" viewBox="0 0 24 24" stroke="currentColor">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
@@ -61,29 +89,17 @@
           class="w-full p-2 border border-orange-400 rounded-lg bg-gray-900 text-orange-400" required></textarea>
 
         <button type="submit"
-          class="w-full bg-orange-500 text-gray-900 font-bold py-2 rounded-lg hover:shadow-lg transition transform hover:scale-105">
-          💾 Save Appointment
+          class="btn-animate w-full bg-orange-500 text-black font-semibold py-2 rounded-lg">
+          💾 Save Appointment Request
         </button>
       </form>
       <p id="responseMessage" class="mt-3 text-center font-semibold"></p>
     </section>
 
-    <!-- PayPal Donate Button -->
-    <section class="bg-gray-800 rounded-2xl shadow p-6 text-center">
-      <form action="https://www.paypal.com/donate" method="post" target="_top">
-        <input type="hidden" name="business" value="blackicerocks82@gmail.com" />
-        <input type="hidden" name="currency_code" value="USD" />
-        <button type="submit" class="bg-orange-500 text-gray-900 font-bold py-3 px-6 rounded-lg hover:shadow-lg transition transform hover:scale-105">
-          Donate
-        </button>
-      </form>
-      <p class="mt-2 text-sm text-gray-400">Donations are optional — thank you for supporting 30 years of experience!</p>
-    </section>
-
     <!-- Appointments View -->
     <section class="bg-gray-800 rounded-2xl shadow p-6">
       <h2 class="text-2xl font-bold mb-4 text-orange-400">🔍 Upcoming Appointments</h2>
-      <div id="appointmentsList" class="space-y-3 text-gray-300">
+      <div id="appointmentsList" class="space-y-3 text-orange-400">
         <p>Loading appointments...</p>
       </div>
     </section>
@@ -99,6 +115,21 @@
     const form = document.getElementById("appointmentForm");
     const responseMessage = document.getElementById("responseMessage");
     const appointmentsList = document.getElementById("appointmentsList");
+
+    const dateInput = document.getElementById("date");
+    const dateDisplay = document.getElementById("dateDisplay");
+
+    function formatDate(date) {
+      const d = new Date(date);
+      const mm = String(d.getMonth() + 1).padStart(2, "0");
+      const dd = String(d.getDate()).padStart(2, "0");
+      const yyyy = d.getFullYear();
+      return `${mm}/${dd}/${yyyy}`;
+    }
+
+    dateInput.addEventListener("input", () => {
+      dateDisplay.value = dateInput.value ? formatDate(dateInput.value) : "";
+    });
 
     async function loadAppointments() {
       appointmentsList.innerHTML = "<p>Loading appointments...</p>";
@@ -127,7 +158,7 @@
       responseMessage.textContent = "Saving...";
       const formData = {
         name: document.getElementById("name").value,
-        date: document.getElementById("date").value,
+        date: dateInput.value,
         time: document.getElementById("time").value,
         description: document.getElementById("description").value
       };
@@ -142,6 +173,7 @@
         if (json.status === "success") {
           responseMessage.textContent = "✅ Appointment saved successfully!";
           form.reset();
+          dateDisplay.value = "";
           loadAppointments();
         } else {
           responseMessage.textContent = "⚠️ " + (json.message || "Error saving appointment.");
